import extra packages for ty check

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,6 +27,7 @@ jobs:
         uses: astral-sh/setup-uv@v7
       - name: Run Ty
         run: |
+            uv sync --all-extras
             uvx ty check
 
   doc-build:
