--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,7 +45,10 @@ jobs:
       if: ${{runner.os != 'Windows' }}
       run: |
         sudo apt-get update
-        sudo apt-get install -y openems
+        sudo apt-get install -y nix
+        nix-chanel add nixpkgs https://nixos.org/channels/nixpkgs-unstable
+        nix-chanel update
+        nix-env -iA nixpkgs.openems
     - name: Install uv
       uses: astral-sh/setup-uv@v7
     - name: Set up Python
