--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -46,8 +46,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y nix
-        nix-chanel add nixpkgs https://nixos.org/channels/nixpkgs-unstable
-        nix-chanel update
+        nix-channel add nixpkgs https://nixos.org/channels/nixpkgs-unstable
+        nix-channel update
         nix-env -iA nixpkgs.openems
     - name: Install uv
       uses: astral-sh/setup-uv@v7
