--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -46,9 +46,9 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y nix
-        nix-channel --add https://nixos.org/channels/nixpkgs-unstable nixpkgs
-        nix-channel --update
-        nix-env -iA nixpkgs.openems
+        sudo nix-channel --add https://nixos.org/channels/nixpkgs-unstable nixpkgs
+        sudo nix-channel --update
+        sudo nix-env -iA nixpkgs.openems
     - name: Install uv
       uses: astral-sh/setup-uv@v7
     - name: Set up Python
