add poe command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,15 @@ simulate = [
 requires = ["uv_build>=0.9.15,<0.10.0"]
 build-backend = "uv_build"
 
+[tool.poe.tasks.precommit]
+sequence = [
+    {cmd = "uv sync --all-groups --all-extras"},
+    {cmd = "uvx ruff format"},
+    {cmd = "uvx ruff check"},
+    {cmd = "pytest"},
+]
+
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 log_cli_level = "ERROR"
@@ -27,5 +36,6 @@ log_file = "./pytest.log"
 
 [dependency-groups]
 dev = [
+    "poethepoet>=0.40.0",
     "pytest>=9.0.2",
 ]
