more option in xml generator

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ sequence = [
     {cmd = "uv sync --all-groups --all-extras"},
     {cmd = "uvx ruff format"},
     {cmd = "uvx ruff check"},
-    {cmd = "pytest"},
+    {cmd = "pytest --basetemp=tmp"},
 ]
 
 
