--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ sequence = [
     {cmd = "uv sync --all-groups --all-extras"},
     {cmd = "uvx ruff format"},
     {cmd = "uvx ruff check"},
+    {cmd = "uvx ty check"},
     {cmd = "pytest --basetemp=tmp"},
 ]
 
