--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,8 +48,9 @@ jobs:
         sudo apt-get install -y nix
         sudo nix-channel --add https://nixos.org/channels/nixpkgs-unstable nixpkgs
         sudo nix-channel --update
-        nix-env -iA nixpkgs.openems
+        sudo nix-env -iA nixpkgs.openems
         which openEMS
+        echo $PATH
     - name: Install uv
       uses: astral-sh/setup-uv@v7
     - name: Set up Python
