--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,16 +41,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v6
+    - uses: cachix/install-nix-action@v31
+      if: ${{runner.os != 'Windows' }}
+      with:
+        nix_path: nixpkgs=https://nixos.org/channels/nixpkgs-unstable
     - name: Install openEMS for linux
       if: ${{runner.os != 'Windows' }}
       run: |
-        sudo apt-get update
-        sudo apt-get install -y nix
-        export PATH="/root/.nix-profile/bin:$PATH"
-        sudo ls -la /root/.nix-profile/bin
-        sudo nix-channel --add https://nixos.org/channels/nixpkgs-unstable nixpkgs
-        sudo nix-channel --update
-        sudo nix-env -iA nixpkgs.openems -v 2
+        snix-env -i openems -f '<nixpkgs>'
         which openEMS
     - name: Install uv
       uses: astral-sh/setup-uv@v7
