--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Install openEMS for linux
       if: ${{runner.os != 'Windows' }}
       run: |
-        snix-env -i openems -f '<nixpkgs>'
+        nix-env -i openems -f '<nixpkgs>'
         which openEMS
     - name: Install uv
       uses: astral-sh/setup-uv@v7
