--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,11 +44,13 @@ jobs:
     - uses: cachix/install-nix-action@v31
       if: ${{runner.os != 'Windows' }}
       with:
-        nix_path: nixpkgs=https://nixos.org/channels/nixpkgs-unstable
+        nix_path: nixpkgs=channel:nixos-unstable
     - name: Install openEMS for linux
       if: ${{runner.os != 'Windows' }}
       run: |
-        nix-env -i openems -f '<nixpkgs>'
+        nix-channel --list
+        nix-channel --update
+        nix-env -iA nixpkgs.openems
         which openEMS
     - name: Install uv
       uses: astral-sh/setup-uv@v7
