--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -49,6 +49,7 @@ jobs:
       if: ${{runner.os != 'Windows' }}
       run: |
         nix-channel --list
+        nix-channel --add https://nixos.org/channels/nixpkgs-unstable nixpkgs
         nix-channel --update
         nix-env -iA nixpkgs.openems
         which openEMS
