--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,10 @@ dev = [
     "poethepoet>=0.40.0",
     "pytest>=9.0.2",
 ]
+doc = [
+    "cyclopts[mkdocs]>=4.5.1",
+    "mkdocs>=1.6.1",
+    "mkdocs-api-autonav>=0.4.0",
+    "mkdocs-material>=9.7.2",
+    "mkdocstrings[python]>=1.0.3",
+]
